--- a/src/template.html
+++ b/src/template.html
@@ -3,17 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <title>Restaurant Page</title>
 </head>
 <body>
     <header>
         <nav>
-            <button class="home">Home</button>
-            <button class="menu">Menu</button>
-            <button class="about">About</button>
+            <li>
+                <p class="home">Home</p>
+                <p class="menu">Menu</p>
+                <p class="about">About</p>
+            </li>
         </nav>
     </header>
     <div id="content"></div>
-    
 </body>
 </html>
