--- a/src/template.html
+++ b/src/template.html
@@ -11,11 +11,11 @@
 <body>
     <header>
         <nav>
-            <li>
-                <p class="home">Home</p>
-                <p class="menu">Menu</p>
-                <p class="about">About</p>
-            </li>
+            <ul class="nav-bar">
+                <li class="home">Home</li>
+                <li class="menu">Menu</li>
+                <li class="about">About</li>
+            </ul>
         </nav>
     </header>
     <div id="content"></div>
