--- a/src/template.html
+++ b/src/template.html
@@ -9,9 +9,9 @@
     <title>Restaurant Page</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul class="nav-bar">
+    <header class="header">
+        <nav class="nav-bar">
+            <ul class="list">
                 <li class="home">Home</li>
                 <li class="menu">Menu</li>
                 <li class="about">About</li>
